sumo/tests/netconvert/errors/XML/broken_edge/edge#shape__empty1/errors.netconvert
Error: At least one number is missing in shape definition for edge '1'.
Quitting (on error).
